# AI_hackathon_ML_model

./: .dockerignore  .gitignore  Dockerfile  QWEN.md  README.md  aggregator.py  alembic.ini  ct_calibration.py  ct_classifier.py  deep_analysis.py  docker-compose.yml  embeddings.py  franchise_dict.py  knowledge_graph.py  metrica.txt  preprocessing.py  pyproject.toml  requirements.txt  sample_analysis.py  solution.py  supplemental_titles.py  test_errors.txt  test_solution.py  title_extraction.py  title_retrieval.py  train.py  typequery_classifier.py  tz.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  api.py  pipeline.py  schemas.py  settings.py
app/catalog/: repository.py
app/classification/: domain.py  ml_domain.py
app/db/: models.py  repositories.py  session.py
app/embeddings/: __init__.py  encoder.py
app/evaluation/: __init__.py  (+1 more)
artifacts/: ct_classifier.pkl  enriched_films.csv  franchise_dict.json  metadata.json  typequery_model.pkl  typo_dict.json
data/: imdb_catalog.csv  imdb_labeled_queries.csv  sample_catalog.csv  sample_labeled_queries.csv  sample_queries.csv
docs/: architecture.md
scripts/: build_imdb_dataset.py  enrich_titles.py  eval_hidden_like.py  evaluate.py  expand_variants.py  import_catalog.py  import_imdb.py  run_batch.py  submit.py  train_classifier.py
tests/: __init__.py  test_catalog_search.py  test_db_repositories.py  test_demo_ui.py  test_evaluation.py  test_hybrid_retrieval.py  test_imdb_ingestion.py  test_ml_domain.py  test_normalizer.py  test_pipeline.py
(+11 files in other folders)
