[project]
name = "ai-hackathon-ml-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.12",
    "fastapi>=0.100",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "scikit-learn>=1.3.0",
    "sqlalchemy>=2.0",
    "uvicorn>=0.20",
]
